<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) @ 2019 Yash Prakash
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    android:layout_margin="@dimen/margin_normal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:textSize="@dimen/text_size_small"
        android:text="@string/how_fast_can_you_read"
        android:layout_margin="@dimen/margin_small"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal">

        <Button
            android:id="@+id/slow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/slow"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/fast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/fast"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/pretty_fast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/pretty_fast"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberScrollChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_my_choice"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</LinearLayout>